# text_temporal

./: .dockerignore  .env  .flake8  .gitignore  .style.yapf  .yapfignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pytest.ini  requirements-docker.txt  requirements.txt  setup.cfg
.github/workflows/: devops-github.yml
data/: data.md
docs/: docs.md
logs/: logs.md
notebooks/: temporal_notebook.ipynb
src/: control.py  get_models.py  input_data.py  output_data.py
tests/: test_get_text_data.py  test_main.py
