[metadata]
name = PACKAGE NAME
version = 0.0.1
author = Anthony Wynne
author_email = 12174019+ant358@users.noreply.github.com
description = A mlops template for deloying models into containers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ant358/ml-ops-template/
project_urls =
    Bug Tracker = https://github.com/ant358/ml-ops-template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires =3.9
install_requires =
    -r requirements.txt

[options.packages.find]
where = src
